--- a/index2.html
+++ b/index2.html
@@ -28,6 +28,8 @@
 
     <link rel="stylesheet" href="public/ressources/css/style.css">
 
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css">
+
 
 
 
@@ -238,7 +240,7 @@
 
                 <div class="col-md-12">
 
-                    <h2> Nos Mangas </h2>
+                    <h2> La Unes </h2>
 
 
                 </div>
